--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <!-- App content will go here -->
+  <h1>Sorting Hat Draft Pick</h1>
+  <p>If you see this text styled, CSS is working.</p>
   <script src="app.js"></script>
 </body>
 </html>
