Fixed error with adding team member not working, you can now add teams and add participants

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <h2>People Management</h2>
     <form id="person-form">
       <input type="text" id="person-name" placeholder="Enter participant name" required />
-      <button type="submit">Add x</button>
+      <button type="submit">Add Participant</button>
     </form>
     <ul id="person-list"></ul>
     <p id="person-error" style="color: red;"></p>
