--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,7 +7,10 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Sorting Hat Draft Pick</h1>
+  <header id="main-header">
+    <h1>Sorting Hat Draft Pick</h1>
+    <div id="phase-indicator"></div>
+  </header>
   <section id="team-management">
     <h2>Team Management</h2>
     <form id="team-form">
@@ -41,17 +43,28 @@
     <p id="setup-error" style="color: red;"></p>
   </section>
   <section id="draft-phase" style="display:none;">
-    <h2>Draft Phase</h2>
-    <div id="draft-board"></div>
-    <div>
-      <span id="draft-round"></span>
-      <span id="draft-team-turn"></span>
+    <div class="draft-header">
+      <h2>Draft Phase</h2>
+      <div class="draft-progress">
+        <span id="draft-round"></span>
+        <span id="draft-team-turn"></span>
+      </div>
     </div>
-    <button id="next-pick" disabled>Next Pick</button>
-    <div>
+    <div id="draft-board" class="draft-board"></div>
+    <div class="draft-controls">
+      <button id="next-pick" disabled>Next Pick</button>
+      <button id="back-to-setup" type="button" style="margin-left:16px;background:#d7263d;">Back to Setup</button>
+    </div>
+    <div class="remaining-participants">
       <strong>Remaining Participants:</strong>
       <ul id="remaining-people-list"></ul>
     </div>
+  </section>
+  <section id="results-phase" style="display:none;">
+    <h2>Results Phase</h2>
+    <div id="results-board"></div>
+  <button id="restart-draft">Restart Draft</button>
+  <button id="results-back-to-setup" type="button" style="margin-left:16px;background:#d7263d;">Back to Setup</button>
   </section>
   <script src="app.js"></script>
 </body>
