Added ability to assign all participants

--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
     </div>
     <div id="draft-board" class="draft-board"></div>
     <div class="draft-controls">
-      <button id="next-pick" disabled>Next Pick</button>
-      <button id="back-to-setup" type="button" style="margin-left:16px;background:#d7263d;">Back to Setup</button>
+  <button id="next-pick" disabled>Next Pick</button>
+  <button id="assign-all" type="button" style="margin-left:16px;background:#2ad76a;">Assign All</button>
+  <button id="back-to-setup" type="button" style="margin-left:16px;background:#d7263d;">Back to Setup</button>
     </div>
     <div class="remaining-participants">
       <strong>Remaining Participants:</strong>
