Add ability to upload a file of users

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
       <input type="text" id="person-name" placeholder="Enter participant name" required />
       <button type="submit">Add Participant</button>
     </form>
+    <div class="upload-area">
+      <label for="upload-participants" class="upload-label">Upload list:</label>
+      <input type="file" id="upload-participants" accept=".csv,.txt" class="upload-input" />
+    </div>
     <ul id="person-list"></ul>
     <p id="person-error" style="color: red;"></p>
   </section>
